Desenvolvimento da função de obter um usuário, e prototipo de proxima função
